<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradiant_background"
    android:orientation="vertical"
    tools:context=".Basic">

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="36dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:text="@string/stay_in_home"
        android:textColor="#FFFF"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="@+id/b6"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.405" />

    <Button
        android:id="@+id/b5"
        android:layout_width="196dp"
        android:layout_height="wrap_content"
        android:background="@color/colorAccent"
        android:text="@string/about_covid_19"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="@+id/b7"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.598" />

    <Button
        android:id="@+id/b6"
        android:layout_width="196dp"
        android:layout_height="wrap_content"
        android:background="@color/colorAccent"
        android:text="@string/covid_19_distribution"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="@+id/b5"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/b7"
        android:layout_width="196dp"
        android:layout_height="wrap_content"
        android:background="@color/colorAccent"
        android:text="@string/protection_from_covid_19"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="@+id/b8"
        app:layout_constraintTop_toBottomOf="@+id/b6"
        app:layout_constraintVertical_bias="0.317" />

    <Button
        android:id="@+id/b8"
        android:layout_width="191dp"
        android:layout_height="54dp"
        android:background="@color/colorAccent"
        android:text="@string/hand_washing_reminder"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="@+id/b9"
        app:layout_constraintTop_toBottomOf="@+id/b7"
        app:layout_constraintVertical_bias="0.236" />

    <Button
        android:id="@+id/b9"
        android:layout_width="191dp"
        android:layout_height="54dp"
        android:background="@color/colorAccent"
        android:text="@string/symptoms_of_covid_19"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/b8" />

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="411dp"
        android:layout_height="247dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        app:srcCompat="@drawable/corona" />

</androidx.constraintlayout.widget.ConstraintLayout>